# exp10

./: .gitignore  CMakeLists.txt  Makefile  accuracy_report.txt  gen_coeffs.sollya
include/: accuracy_logger.h  bench.h  common.h  exp10_versions.h
src/: accuracy_logger.c  bench.c  common.c  main.c  sleef_avx.c  v0.c  v1.c  v2.c  v3.c  v3_avx.c  v4.c  v4_avx.c  v5.c  v5_avx.c  v6.c  v7_avx2.c
